--- a/nacos/docker-compose.nacos.yml
+++ b/nacos/docker-compose.nacos.yml
@@ -45,7 +45,7 @@ services:
     container_name: "prometheus"
     image: "prom/prometheus:latest"
     volumes:
-      - "./prometheus/prometheus-standalone.yaml:/etc/prometheus/prometheus.yml"
+      - "./prometheus/prometheus-standalone.yml:/etc/prometheus/prometheus.yml"
     ports:
       - "9000:9000"
     depends_on:
